# QtAldegea

./: CMakeLists.txt  QtAldegea.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
android/: AndroidManifest.xml
android/res/values/: strings.xml
drivers/: bluetoothscanner.cpp  bluetoothscanner.h
i18n/: QtAldegea_nl_NL.ts
